syntax = "proto3";

option go_package = "github.com/MemeLabs/go-ppspp/pkg/pb;pb";

message ServerConfig {
  bytes key = 1;
  uint32 name_change_quota = 2;
  uint64 token_ttl = 3;
  repeated string roles = 4;
}

message NickServRecord {
  uint64 id = 1;
  bytes hash = 2;
  bytes key = 3;
  bytes host_id = 4;
  string name = 5;
  uint32 remaining_name_change_quota = 6;
  uint64 updated_timestamp = 7;
  uint64 created_timestamp = 8;
  repeated string roles = 9;
}

message NickServToken {
  bytes key = 1;
  string nick = 2;
  uint64 valid_until = 3;
  bytes signature = 4;
  repeated string roles = 5;
}

message NickServRPCCommand {
  uint64 request_id = 1;
  bytes source_public_key = 2;

  message Create {
    string nick = 1;
  }

  message Retrieve {
    string nick = 1;
  }

  message Update {
    string nick = 1;
    oneof param {
      string new_nick = 2;
      uint32 name_change_quota = 3;
      string roles = 4;
    }
  }

  message Delete {
    string nick = 1;
  }

  oneof body {
    Create create = 5;
    Retrieve retrieve = 6;
    Update update = 7;
    Delete delete = 8;
  }
}

message NickServRPCResponse {
  uint64 request_id = 1;

  message Error {
    string msg = 1;
  }

  message Update {}
  
  message Delete {}

  oneof body {
    Error error = 2;
    Update update = 3;
    Delete delete = 4;
    NickServToken create = 5;
    NickServToken retrieve = 6;
  }
}
